--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -57,7 +57,7 @@
 		<img src="http://students.washington.edu/pes/Images/UW%20Seal.GIF" alt="Mountain View" style="width:304px;height:304px;">
         
             <div id="rss_feed" 
-         data-feed="http://feeds.labnol.org/labnol" 
+         data-feed="http://news.google.com/news?cf=all&hl=en&pz=1&ned=us&output=rss" 
          data-count="12">Loading RSS Feed..</div>
         
 	</body>
