--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	 <head>
-    <meta charset="utf-8">
-    <title>Show RSS Feed</title>
+	<head>
+
+    <title></title>
     <script src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
       google.load("feeds", "1")
