--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -2,39 +2,8 @@
 <html>
   <head>
   <title></title>
-	  
-	  
-	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-	<script src="http://www.google.com/uds/solutions/dynamicfeed/gfdynamicfeedcontrol.js"
-	type="text/javascript"></script>
-
-	<style type="text/css">
-	@import url("http://www.google.com/uds/solutions/dynamicfeed/gfdynamicfeedcontrol.css");
-
-	#feedControl {
-	margin-top : 10px;
-	margin-left: auto;
-	margin-right: auto;
-	width : 440px;
-	font-size: 12px;
-	color: #9CADD0;
-	}
-	</style>
-	<script type="text/javascript">
-	function load() {
-	var feed ="http://rss.cnn.com/rss/edition_world.rss";
-	new GFdynamicFeedControl(feed, "feedControl");
-
-	}
-	google.load("feeds", "1");
-	google.setOnLoadCallback(load);
-	</script>
   </head>
 	<body>
-		
-		<div id="body">
-		<div id="feedControl">Loading...</div>
-		</div>
 		
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/FnCdOQsX5kc" frameborder="0" allowfullscreen></iframe>
 		
@@ -50,6 +19,8 @@
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d300860.75867151655!2d-166.8559738203566!3d53.905540462253654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x57abb0a2c1167377%3A0x6fe44e9b4e08f73e!2sUnalaska%2C+AK!5e0!3m2!1sen!2sus!4v1490837154553" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		-->
         	
+		<script src="//rss.bloople.net/?url=http%3A%2F%2Frss.cnn.com%2Frss%2Fedition_world.rss&limit=10&showtitle=false&type=js"></script>
+		
 		<img src="http://students.washington.edu/pes/Images/UW%20Seal.GIF" alt="Mountain View" style="width:304px;height:304px;">
         	
 		
