--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -12,6 +12,9 @@
 		<video src="mov_bbb.mp4" controls>
 		</video>
 		
+		<audio src="George Michael - Careless Whisper (Lyrics).mp3" controls>
+		</audio>
+		
 		<object width="400" height="400" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d300860.75867151655!2d-166.8559738203566!3d53.905540462253654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x57abb0a2c1167377%3A0x6fe44e9b4e08f73e!2sUnalaska%2C+AK!5e0!3m2!1sen!2sus!4v1490837154553">
 		</object>
 		
