--- a/tags.html
+++ b/tags.html
@@ -7,7 +7,7 @@
 		<h1>[Andy Nguyen]</h1>
 		<h2>About Me</h2>
 		<p>Hi I'm Andy Nguyen and I'm a sophomore at the University of Washington.</p>
-		<p>I guess a cool fact about me is that I am originally from Alaska.</p>
+		<p>The quick silver dog jumped over the lazy yellow fox.</p>
 		<h2>My Favorite Sites</h2>
 		<ol>
 			<li> 
@@ -27,6 +27,13 @@
 			</li>
 		</ol>
 		<h2>My Favorite Pictures</h2>
-			<img src="https://res.cloudinary.com/teepublic/image/private/s--3-Z0L1P5--/b_rgb:484849,c_limit,f_jpg,h_800,q_90,w_800/v1446235264/production/designs/250980_1.jpg" title="the goat" style="width:100px;height:100px;margin:5px">
+			<a href="https://www.teepublic.com/t-shirt/250980-mario-chalmers-face"><img src="https://res.cloudinary.com/teepublic/image/private/s--3-Z0L1P5--/b_rgb:484849,c_limit,f_jpg,h_800,q_90,w_800/v1446235264/production/designs/250980_1.jpg" title="the goat" style="width:100px;height:100px;margin:5px"></a>
+
+			<a href="http://knowyourmeme.com/memes/manningface"><img src="http://i0.kym-cdn.com/entries/icons/facebook/000/016/212/manning.jpg" title="the goat pt. 2" style="width:100px;height:100px;margin:5px"></a>
+		<p><small> This text was with the small tag </small></p>
+		<p><strong> This text was with the strong tag </strong></p>
+		<p>2<sup>10</sup></p>
+		<p>100<sub>20</sub></p>
+		<p>emphasis. <em>emphasis!</em></p>
 	</body>
 </html>
