--- a/myFunSite.html
+++ b/myFunSite.html
@@ -37,7 +37,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="active"><a href="index.html">Home</a></li>
+									<li class="active"><a href="myFunSite.html">Home</a></li>
 									<li>
 										<a href="">Dropdown</a>
 										<ul>
@@ -57,9 +57,12 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">master work link 1</a></li>
+									<li><a href="master-work-link2.html">Master work link 2</a></li>
+                                    <li><a href="no-sidebar.html">master work link 3</a></li>            
+                        
+                                    <li><a href="http://facebook.com/profile.php?=73322363">wowza link </a></li>
+
 								</ul>
 							</nav>
 	
@@ -69,9 +72,9 @@
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
-						<h2>Solarize</h2>
-						<span>Design by Templated</span>
-						<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna.</p>
+						<h2>Swag, inc.</h2>
+						<span>Original work by Andy Nguyen</span>
+						<p>This is the homepage of a fun company i made up</p>
 					</section>
 				</div>
 
@@ -83,21 +86,21 @@
 					<div class="row double">
 						<div class="6u">
 							<header class="major">
-								<h2>Pellentesque viverra vulputate enim. Aliquam volutpat. Pellentesque tristique Risus</h2>
-								<span class="byline">In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Donec pulvinar ullamcorper metus.</span>
+								<h2>Company description here</h2>
+								<span class="byline">located in Seattle, Washington.</span>
 							</header>
 						</div>
 						<div class="6u">
-							<h3>Suspendisse dictum porta</h3>
-							<p>Donec leo. Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Vestibulum imperdiet, magna nec eleifend semper augue mattis wisi maecenas ligula nunc lectus vestibulum euismod lacinia quam nisl.</p>
-							<a href="#" class="button">Nulla aluctus eleifend</a>
+							<h3>Wowza</h3>
+							<p>Made for Info 101.</p>
+							<a href="#" class="button">Oh cool, a button</a>
 						</div>
 					</div>
 				</section>
 			</div>
 
-		<!-- Section Two -->
-			<div class="wrapper style3">
+		<!-- Section Two 
+            <div class="wrapper style3">
 				<section class="container">
 					<header class="major">
 						<h2>Cras vitae metus aliNuam</h2>
@@ -105,9 +108,9 @@
 					<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</p>
 					<a href="#" class="button alt">Nulla aluctus eleifend</a>
 				</section>
-			</div>
+			</div> -->
 
-		<!-- Section Three -->
+		<!-- Section Three 
 			<div class="wrapper style4">
 				<section class="container">
 					<header class="major">
@@ -175,13 +178,14 @@
 					</div>
 				</section>
 			</div>
+        -->
 		
 		<!-- Team -->
 			<div class="wrapper style5">
 				<section id="team" class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
-						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
+						<h2>Meet the cracking squad</h2>
+						<span class="byline">Their blurbs are in Latin because why not</span>
 					</header>
 					<div class="row">
 						<div class="3u">
@@ -212,8 +216,8 @@
 		<div id="footer">
 			<section class="container">
 				<header class="major">
-					<h2>Connect with us</h2>
-					<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+					<h2>Hit us up social media, plz.</h2>
+					<span class="byline">We post cool sh*!</span>
 				</header>
 				<ul class="icons">
 					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
