--- a/myFunSite.html
+++ b/myFunSite.html
@@ -185,7 +185,7 @@
 				<section id="team" class="container">
 					<header class="major">
 						<h2>Meet the cracking squad</h2>
-						<span class="byline">Their blurbs are in Latin because why not</span>
+						<span class="byline">Their blurbs are in Latin and I don't know why</span>
 					</header>
 					<div class="row">
 						<div class="3u">
@@ -217,7 +217,7 @@
 			<section class="container">
 				<header class="major">
 					<h2>Hit us up social media, plz.</h2>
-					<span class="byline">We post cool sh*!</span>
+					<span class="byline">We post cool stuff</span>
 				</header>
 				<ul class="icons">
 					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
