--- a/myFunSite.html
+++ b/myFunSite.html
@@ -92,7 +92,7 @@
 						</div>
 						<div class="6u">
 							<h3>Wowza</h3>
-							<p>Made for Info 101.</p>
+							<p>Made for Info 101. We do things. That's the company.</p>
 							<a href="#" class="button">Oh cool, a button</a>
 						</div>
 					</div>
