--- a/master-work-link2.html
+++ b/master-work-link2.html
@@ -78,7 +78,7 @@
 						<div id="content" class="8u skel-cell-important">
 							<section>
 								<header class="major">
-									<h2>Right Sidebar</h2>
+									<h2>Master Work Link 2</h2>
 									<span class="byline">Nullam non wisi a sem semper eleifend</span>
 								</header>
 								<p>Whoa a separate page.</p>
