--- a/myFunSite.html
+++ b/myFunSite.html
@@ -87,7 +87,9 @@
 						<div class="6u">
 							<header class="major">
 								<h2>Company description here</h2>
-								<span class="byline">located in Seattle, Washington.</span>
+								<span class="byline">located in Seattle, Washington. </span>
+								<br>
+								<span class="byline">I couldn't change the CSS file to "default.css" like it says in the Apprentice level work, so it's just "style.css" located in the CSS folder. </span>
 							</header>
 						</div>
 						<div class="6u">
