--- a/myFunSite.html
+++ b/myFunSite.html
@@ -88,13 +88,13 @@
 							<header class="major">
 								<h2>Company description here</h2>
 								<span class="byline">located in Seattle, Washington. </span>
-								<br>
-								<span class="byline">I couldn't change the CSS file to "default.css" like it says in the Apprentice level work, so it's just "style.css" located in the CSS folder. </span>
+								
 							</header>
 						</div>
 						<div class="6u">
 							<h3>Wowza</h3>
 							<p>Made for Info 101. We do things. That's the company.</p>
+							<p>I couldn't change the CSS file to "default.css" like it says in the Apprentice level work, so it's just "style.css" located in the CSS folder. </p>
 							<a href="#" class="button">Oh cool, a button</a>
 						</div>
 					</div>
